NetBSD Problem Report #51000

From www@NetBSD.org  Thu Mar 24 12:03:11 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 8F2097ACAB
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 24 Mar 2016 12:03:11 +0000 (UTC)
Message-Id: <20160324120310.A3E9F7ACAD@mollari.NetBSD.org>
Date: Thu, 24 Mar 2016 12:03:10 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/lib/libc/citrus/modules/citrus_johab.c:352: possible pointless assignment ?
X-Send-Pr-Version: www-1.0

>Number:         51000
>Category:       lib
>Synopsis:       src/lib/libc/citrus/modules/citrus_johab.c:352: possible pointless assignment ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 24 12:05:00 +0000 2016
>Closed-Date:    Tue May 31 03:41:30 +0000 2016
>Last-Modified:  Tue May 31 03:41:30 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160324
>Organization:
>Environment:
>Description:
src/lib/libc/citrus/modules/citrus_johab.c:352]: (style) Variable 'l' is assigned a value that is never used.

Source code is

       l = (linear / 188) + m;


Suggest either remove assignment, or use l in some way. 

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51000 CVS commit: src/lib/libc/citrus/modules
Date: Tue, 31 May 2016 03:34:14 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Tue May 31 03:34:14 UTC 2016

 Modified Files:
 	src/lib/libc/citrus/modules: citrus_johab.c

 Log Message:
 PR 51000 David Binderman: comment out unused assignment


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/lib/libc/citrus/modules/citrus_johab.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 31 May 2016 03:41:30 +0000
State-Changed-Why:
Fixed, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.