PR 51000 David Binderman: comment out unused assignment